# atomic

./: .env.example  .gitignore  Cargo.toml  README.md  RocketExample.toml
.github/workflows/: rust.yml
migrations/2020-05-19-212426_create_users/: up.sql
migrations/2020-06-07-001415_create_auths/: up.sql
migrations/2020-06-08-022602_delete_scopes_column/: down.sql  up.sql
migrations/2020-08-29-100137_create_posts/: up.sql
migrations/2020-08-29-214654_create_media/: up.sql
migrations/2020-09-02-073649_create_follows/: up.sql
src/: main.rs  routes.rs  schema.rs
src/auth/: mod.rs  model.rs  routes.rs
src/authentication/: authmodel.rs  mod.rs
src/follow/: mod.rs  model.rs  routes.rs
src/media/: model.rs
src/post/: mod.rs  model.rs  routes.rs
src/posts/: mod.rs  model.rs  routes.rs
src/user/: mod.rs  model.rs  routes.rs  usermodel.rs
src/utils/: mod.rs
