[package]
name = "atomic-serv"
version = "0.1.0"
authors = ["nolvalue"]
edition = "2018"

[dependencies]
#Basic Webserver Stuff
rocket = { git   = "https://github.com/SergioBenitez/Rocket" }

# Serialization/Deserialization
serde_json ={ version = "1.0.57", features = ["preserve_order"] }
serde = "1.0.115"
serde_derive = "1.0.115"

#Database
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
rust-argon2 = "0.8.2"
chrono = {version = "0.4.15", features = ["serde"] }

#RNG
rand = '0.7.3'

#Regex
regex = "1.3.9"

#Lazy_Static
lazy_static = "1.4.0"
[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json", "diesel_postgres_pool"]
